--- a/workOut/Base.lproj/LaunchScreen.storyboard
+++ b/workOut/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="workout.png" translatesAutoresizingMaskIntoConstraints="NO" id="8vM-qr-hUa">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="8vM-qr-hUa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Q5r-pz-sdl"/>
+                            <constraint firstItem="8vM-qr-hUa" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="dYy-9e-rA8"/>
+                            <constraint firstItem="8vM-qr-hUa" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="wdA-gD-i63"/>
+                            <constraint firstItem="8vM-qr-hUa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xLC-d5-0OH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -26,4 +37,7 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="workout.png" width="500" height="500"/>
+    </resources>
 </document>
