layout little changed....

--- a/workOut/Base.lproj/Main.storyboard
+++ b/workOut/Base.lproj/Main.storyboard
@@ -178,6 +178,21 @@
             </objects>
             <point key="canvasLocation" x="-148" y="1447"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="ANx-fK-fnX">
+            <objects>
+                <viewController id="Iza-rw-AYv" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BaF-pw-7Bb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="FZB-YP-9Mv"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tKS-Gv-Dz9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1566" y="-1097"/>
+        </scene>
         <!--Set Menu Table-->
         <scene sceneID="aAh-nr-dDd">
             <objects>
@@ -253,9 +268,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aPl-RM-Y38">
                                 <rect key="frame" x="0.0" y="64" width="375" height="83"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="セットメニューネーム" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JXZ-1q-JAJ">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="セットメニューネーム" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JXZ-1q-JAJ">
                                         <rect key="frame" x="8" y="26" width="359" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -263,7 +277,10 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="JXZ-1q-JAJ" secondAttribute="trailing" constant="8" id="2wu-xK-3Yi"/>
+                                    <constraint firstItem="JXZ-1q-JAJ" firstAttribute="leading" secondItem="aPl-RM-Y38" secondAttribute="leading" constant="8" id="CFX-cQ-RVD"/>
                                     <constraint firstAttribute="height" constant="83" id="PTv-GA-iys"/>
+                                    <constraint firstItem="JXZ-1q-JAJ" firstAttribute="top" secondItem="aPl-RM-Y38" secondAttribute="top" constant="26" id="lm8-in-dfN"/>
                                     <constraint firstAttribute="width" constant="375" id="oZE-5z-cPy"/>
                                 </constraints>
                             </view>
@@ -468,24 +485,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iJT-0d-4PI" customClass="FSCalendar">
-                                <rect key="frame" x="0.0" y="64" width="375" height="298"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="298" id="ga7-El-SvI"/>
-                                    <constraint firstAttribute="width" constant="375" id="nM1-pD-Eml"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="headerDateFormat" value="yyyy年MM月"/>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="headerMinimumDissolvedAlpha">
-                                        <real key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="スケジュール内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o8r-xX-9vX">
                                 <rect key="frame" x="25" y="471" width="334" height="20.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="334" id="CBW-Pu-xlF"/>
                                     <constraint firstAttribute="height" constant="20.5" id="wvD-Za-uF9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -507,29 +509,41 @@
                                 <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Gxh-4L-m3s"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="Rtj-aK-2bS"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="tme-Dv-8xy"/>
                                     <constraint firstAttribute="width" constant="60" id="uEX-LR-hx2"/>
                                 </constraints>
                                 <state key="normal" title="+">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iJT-0d-4PI" customClass="FSCalendar">
+                                <rect key="frame" x="0.0" y="64" width="375" height="322"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="9Qg-tk-3Fx"/>
+                                    <constraint firstAttribute="height" constant="322" id="cVi-zy-2Kn"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="headerDateFormat" value="yyyy年MM月"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="headerMinimumDissolvedAlpha">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="tzd-fU-QJm" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="16" id="4GX-Fe-prf"/>
+                            <constraint firstItem="tzd-fU-QJm" firstAttribute="top" secondItem="iJT-0d-4PI" secondAttribute="bottom" constant="8" id="FAE-2g-9Ef"/>
                             <constraint firstItem="o8r-xX-9vX" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="25" id="KJj-53-w84"/>
-                            <constraint firstItem="X93-aB-kt4" firstAttribute="bottom" secondItem="o8r-xX-9vX" secondAttribute="bottom" constant="126.5" id="LjZ-gH-wXB"/>
-                            <constraint firstItem="iJT-0d-4PI" firstAttribute="trailing" secondItem="X93-aB-kt4" secondAttribute="trailing" id="LqH-LL-slZ"/>
+                            <constraint firstItem="iJT-0d-4PI" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" id="Mmh-1n-HiP"/>
+                            <constraint firstItem="iJT-0d-4PI" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="TFq-Ly-cTg"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="o8r-xX-9vX" secondAttribute="trailing" constant="16" id="TTg-l9-scB"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="bottom" secondItem="NZO-Ah-ZfC" secondAttribute="bottom" constant="20" id="YIM-8T-w6k"/>
                             <constraint firstItem="o8r-xX-9vX" firstAttribute="top" secondItem="tzd-fU-QJm" secondAttribute="bottom" constant="22" id="dP8-Ti-gT8"/>
-                            <constraint firstItem="iJT-0d-4PI" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="eU7-ma-5DV"/>
-                            <constraint firstItem="tzd-fU-QJm" firstAttribute="top" secondItem="iJT-0d-4PI" secondAttribute="bottom" constant="32" id="gzQ-ck-mNi"/>
-                            <constraint firstItem="iJT-0d-4PI" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" id="iFQ-QH-3dc"/>
+                            <constraint firstItem="iJT-0d-4PI" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="eec-aK-oAt"/>
+                            <constraint firstItem="tzd-fU-QJm" firstAttribute="top" secondItem="iJT-0d-4PI" secondAttribute="bottom" constant="8" id="faB-da-J0U"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="NZO-Ah-ZfC" secondAttribute="trailing" constant="16" id="jK0-Od-d0R"/>
-                            <constraint firstItem="iJT-0d-4PI" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="teI-dy-Dxv"/>
+                            <constraint firstItem="iJT-0d-4PI" firstAttribute="trailing" secondItem="X93-aB-kt4" secondAttribute="trailing" id="lra-B0-9pg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="X93-aB-kt4"/>
                     </view>
@@ -562,7 +576,6 @@
                                     <constraint firstAttribute="height" constant="160" id="jb0-pN-X4O"/>
                                     <constraint firstAttribute="width" constant="289" id="leV-R1-BJf"/>
                                 </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -807,7 +820,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="vCU-YZ-b8a" kind="relationship" relationship="rootViewController" id="eKF-Mp-PFb"/>
+                        <segue destination="vCU-YZ-b8a" kind="relationship" relationship="rootViewController" id="zN2-PN-JQ1"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IpH-vp-MRo" userLabel="First Responder" sceneMemberID="firstResponder"/>
